# laba3

./: CMakeLists.txt  FiestaCalculator.pptx  Пояснительная записка Шокиров М. Х..docx
src/: Calculator.h  Database.h  GUI.h  main.cpp
tests/: CalculatorTest.cpp  DatabaseTest.cpp
